--- a/dashboard.html
+++ b/dashboard.html
@@ -142,8 +142,20 @@
                                         display: false
                                     },
                                     ticks: {
-                                        display: false
+                                        display: false,
+                                        beginAtZero: true
+                                    },
+                                    pointLabels: {
+                                        display: true,
+                                        callback: function(label, index, labels) {
+                                            return label;
+                                        }
                                     }
+                                }
+                            },
+                            plugins: {
+                                legend: {
+                                    display: true
                                 }
                             }
                         }
@@ -177,8 +189,20 @@
                                         display: false
                                     },
                                     ticks: {
-                                        display: false
+                                        display: false,
+                                        beginAtZero: true
+                                    },
+                                    pointLabels: {
+                                        display: true,
+                                        callback: function(label, index, labels) {
+                                            return label;
+                                        }
                                     }
+                                }
+                            },
+                            plugins: {
+                                legend: {
+                                    display: true
                                 }
                             }
                         }
