--- a/dashboard.html
+++ b/dashboard.html
@@ -41,6 +41,10 @@
             max-width: 50%;
             margin: auto;
         }
+        canvas {
+            width: 400px !important;
+            height: 400px !important;
+        }
     </style>
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
